k8s/wallabag/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wallabag
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wallabag.kevingomez.fr`)
      services:
        - kind: Service
          name: wallabag
          port: http
  tls:
    certResolver: letsencrypt
